# paper-search-mcp

./: .env.example  Dockerfile  pyproject.toml
paper_search_mcp/: auth.py  server.py
