[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-search-mcp"
version = "0.2.0"
authors = [
  { name = "P.S Zhang", email = "pengsongzhang96@gmail.com" },
  { name = "Martijn van Rookhuijzen" },
]
description = "A MCP server for searching and downloading academic papers, with API key authentication for remote access."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests",
    "feedparser",
    "fastmcp",
    "mcp[cli]>=1.6.0",
    "PyPDF2>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "httpx[socks]>=0.28.1",
    "uvicorn>=0.27.0",
    "starlette>=0.36.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["paper_search_mcp"]
